--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,21 @@
 [package]
 name = "monkey-rust"
 version = "0.1.0"
+authors = ["Esdras Amora"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "monkey_lib"
+path = "src/lib/mod.rs"
+
+[[bin]]
+name = "monkey-repl"
+path = "src/repl.rs"
+
+[[bin]]
+name = "monkey-cli"
+path = "src/main.rs"
 
 [dependencies]
 clap = "4.1.13"
