--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.70"
 clap = "4.1.13"
+enum-as-inner = "0.5.1"
 indextree = "4.6.0"
 smol_str = "0.1.24"
 strum = { version = "0.24.1", features = ["derive"] }
