--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.70"
+assert-json-diff = "2.0.2"
 clap = "4.1.13"
-indextree = "4.6.0"
+indextree = { version = "4.6.0", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.95"
 smol_str = "0.1.24"
 
 [dev-dependencies]
