--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 anyhow = "1.0.70"
 assert-json-diff = "2.0.2"
 clap = "4.1.13"
+either = { version = "1.8.1", features = ["serde"] }
 indextree = { version = "4.6.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.95"
