--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,12 @@ serde_json = "1.0.95"
 smol_str = "0.1.24"
 
 [dev-dependencies]
+insta = { version = "1.29.0", features = ["yaml"] }
 pretty_assertions = "1.3.0"
+
+
+[profile.dev.package.insta]
+opt-level = 3
+
+[profile.dev.package.similar]
+opt-level = 3
