--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,14 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.70"
-assert-json-diff = "2.0.2"
 clap = "4.1.13"
-either = { version = "1.8.1", features = ["serde"] }
 indextree = { version = "4.6.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.95"
 smol_str = "0.1.24"
+thiserror = "1.0.40"
+tinyvec = { version = "1.6.0", features = ["serde", "alloc"] }
+typed-arena = "2.0.2"
 
 [dev-dependencies]
 insta = { version = "1.29.0", features = ["yaml"] }
