--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,10 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.70"
 clap = "4.1.13"
+fnv = "1.0.7"
 indextree = { version = "4.6.0", features = ["serde"] }
 rand = "0.8.5"
+rustyline = { version = "12.0.0", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.95"
 smol_str = "0.1.24"
