--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 anyhow = "1.0.70"
 clap = "4.1.13"
 fnv = "1.0.7"
+hashbrown = "0.14.0"
 indextree = { version = "4.6.0", features = ["serde"] }
 rand = "0.8.5"
 rustyline = { version = "12.0.0", features = ["derive"] }
